# UEFITool

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  README.rst  basetypes.h  debuglistitem.cpp  debuglistitem.h  descriptor.cpp  descriptor.h  ffs.cpp  ffs.h  ffsengine.cpp  ffsengine.h  ffsparser.cpp  ffsparser.h  gbe.h  guidlineedit.cpp  guidlineedit.h  kaitai_regenerate.sh  macbuild.sh  main.cpp  me.h  meson.build  messagelistitem.cpp  messagelistitem.h  moc_ffsengine.cpp  moc_treemodel.cpp  moc_uefitool.cpp  mytitlebar.cpp  mytitlebar.h  parse.cpp  parse.h  peimage.cpp  peimage.h  resources.qrc  searchdialog.cpp  (+28 more)
.github/workflows/: main.yml
LZMA/: ._LzmaCompress.h  LzmaCompress.c  LzmaCompress.h  LzmaDecompress.c  LzmaDecompress.h  x86Convert.h
LZMA/SDK/C/: LzFind.c  LzmaDec.c  LzmaEnc.c
OZMHelper/: README  ffsutil.cpp  ffsutil.h  helper.h  ozmhelper.cpp  ozmhelper.h  ozmhelper.pro  ozmhelper_main.cpp  util.cpp  util.h  wrapper.cpp  wrapper.h
OZMHelper/dsdt2bios/: Dsdt2Bios.c  Dsdt2Bios.cpp  Dsdt2Bios.h  PeImage.h  capstone.h
OZMHelper/dsdt2bios/capstone/: MCInst.h  cs.c  cs_priv.h  utils.h
OZMHelper/ffs/: GenFfs.c  GenSec.c  kextconvert.cpp  kextconvert.h
OZMHelper/plist/: Plist.cpp  Plist.hpp  pugiconfig.hpp
OZMTool/: OZMTool.sh  README  build_linux.sh  build_macos.sh  build_win.bat  common.h  ffsutil.cpp  ffsutil.h  ozmtool.cpp  ozmtool.h  ozmtool.pro  ozmtool_main.cpp  util.cpp  util.h  version.h
OZMTool/distorm/: config.h  decoder.c  decoder.h  distorm.c  instructions.c  instructions.h  insts.c  insts.h  mnemonics.c  operands.c  operands.h  prefix.c  prefix.h  textdefs.c  textdefs.h  wstring.c  wstring.h  x86defs.h
OZMTool/dsdt2bios/: Dsdt2Bios.cpp  Dsdt2Bios.h
OZMTool/ffs/: kextconvert.cpp
OZMTool/plist/: PlistDate.cpp  PlistDate.hpp  base64.hpp  pugixml.cpp
OZMTool/qtplist/: LICENSE  PListParser.cpp  PListParser.h  PListSerializer.cpp  PListSerializer.h  README
Tiano/: EfiCompress.c  EfiTianoCompress.c  EfiTianoCompress.h  EfiTianoCompressLegacy.c  EfiTianoDecompress.c  EfiTianoDecompress.h  TianoCompress.c
UEFIDump/: CMakeLists.txt  uefidump.cpp  uefidump.h  uefidump_main.cpp
UEFIExtract/: CMakeLists.txt  ffsdumper.cpp  ffsdumper.h  meson.build  uefidump.cpp  uefidump.h  uefiextract.cpp  uefiextract.h  uefiextract.manifest  uefiextract.pro  uefiextract_main.cpp
UEFIFind/: CMakeLists.txt  meson.build  uefifind.cpp  uefifind.h  uefifind.pro  uefifind_main.cpp
UEFIPatch/: CMakeLists.txt  patches-misc.txt  patches.txt  uefipatch.cpp  uefipatch.h  uefipatch.pro  uefipatch_main.cpp
UEFIReplace/: CMakeLists.txt  uefireplace.cpp  uefireplace.h  uefireplace.pro  uefireplace_main.cpp
UEFITool/: CMakeLists.txt  Info.plist  ffsfinder.cpp  ffsfinder.h  ffsops.cpp  ffsops.h  gotoaddressdialog.h  gotoaddressdialog.ui  gotobasedialog.h  gotobasedialog.ui  gotooffsetdialog.h  gotooffsetdialog.ui  guidlineedit.cpp  guidlineedit.h  hexlineedit.cpp  hexlineedit.h  hexspinbox.cpp  hexspinbox.h  hexviewdialog.cpp  hexviewdialog.h  hexviewdialog.ui  messagelistitem.cpp  messagelistitem.h  qrc_uefitool.cpp  searchdialog.cpp  searchdialog.h  searchdialog.ui  uefitool.cpp  uefitool.desktop  uefitool.entitlements  uefitool.h  uefitool.pro  uefitool.qrc  uefitool.rc  uefitool.ui  uefitool_main.cpp
UEFITool-master/: guidlineedit.cpp  guidlineedit.h  messagelistitem.cpp  peimage.cpp  resources.qrc  searchdialog.ui  treeitem.cpp  treemodel.cpp  treemodel.h  types.h  uefitool.cpp  uefitool.h  uefitool.icns  uefitool.pro  uefitool.rc  uefitool.ui
UEFITool-master/LZMA/: LzmaDecompress.h
UEFITool-master/Tiano/: EfiTianoCompressLegacy.c
UEFITool-master/UEFIExtract/: uefiextract.pro
UEFITool-master/UEFIFind/: uefifind.cpp  uefifind.h
UEFITool-master/UEFIPatch/: patches.txt  uefipatch.cpp  uefipatch.pro
UEFITool/icons/: uefitool.icns
UEFITool/qhexedit2/: chunks.cpp  commands.cpp  qhexedit.cpp  qhexedit.h
UEFITool/qhexview5/: LICENSE  qhexview.cpp  qhexview.h
UEFITool/qhexview5/model/: qhexcursor.cpp  qhexcursor.h  qhexdelegate.cpp  qhexdelegate.h  qhexdocument.cpp  qhexdocument.h  qhexmetadata.cpp  qhexmetadata.h  qhexoptions.h  qhexutils.cpp  qhexutils.h
UEFITool/qhexview5/model/buffer/: qdevicebuffer.cpp  qdevicebuffer.h  qhexbuffer.cpp  qhexbuffer.h  qmemorybuffer.cpp  qmemorybuffer.h
UEFITool/qhexview5/model/commands/: hexcommand.cpp  hexcommand.h  insertcommand.cpp  insertcommand.h  removecommand.cpp  removecommand.h  replacecommand.cpp  replacecommand.h
XcodeQT5/UEFITool/: Info.plist
XcodeQT6/UEFITool/: main.m
appstream/: appdata.xml
bstrlib/: bsafe.c  bsafe.h  bstest.c  bstraux.c  bstraux.h  bstrlib.c  bstrlib.h  bstrlib.txt  bstrwrap.cpp  bstrwrap.h  test.cpp  testaux.c
common/: basetypes.h  bgmanifestparser.cpp  bgmanifestparser.h  bootguard.h  descriptor.cpp  descriptor.h  ffs.cpp  ffs.h  ffsbuilder.cpp  ffsbuilder.h  ffsops.cpp  ffsops.h  ffsparser.cpp  ffsparser.h  ffsreport.cpp  ffsreport.h  ffsutils.cpp  ffsutils.h  filesystem.cpp  filesystem.h  fit.h  fitparser.cpp  fitparser.h  gbe.h  guiddatabase.cpp  guiddatabase.h  guids.csv  intel_fit.h  intel_microcode.h  me.h  meparser.cpp  meparser.h  meson.build  nvram.cpp  nvram.h  nvramparser.cpp  nvramparser.h  parsingdata.h  peimage.cpp  peimage.h  (+17 more)
common/LZMA/: LzmaCompress.c  LzmaCompress.h  LzmaDecompress.c  LzmaDecompress.h  UefiLzma.h
common/LZMA/SDK/C/: CpuArch.c  Precomp.h  Types.h
common/Tiano/: EfiTianoCompress.c  EfiTianoCompress.h  EfiTianoCompressLegacy.c  EfiTianoDecompress.c  EfiTianoDecompress.h
common/bstrlib/: bstrlib.c  bstrlib.h  bstrwrap.cpp  bstrwrap.h
common/digest/: sha1.c  sha1.h  sha2.h  sha256.c  sha512.c  sm3.c  sm3.h
common/kaitai/: exceptions.h  kaitaistream.cpp  kaitaistream.h  kaitaistruct.h
common/ksy/: ami_nvar.ksy  edk2_vss.ksy  intel_acbp_v1.ksy  intel_acbp_v2.ksy  intel_acm.ksy  intel_keym_v1.ksy  intel_keym_v2.ksy
common/zlib/: deflate.c  gzguts.h  gzread.c  gzwrite.c  inflate.c  trees.c
fuzzing/: CMakeLists.txt  ffsparser_fuzzer.cpp
qhexedit2/: qhexedit.cpp  qhexedit.h
(+95 files in other folders)
